...
            "state" : "translated",
            "value" : "DOIGT"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terminé"
          }
...
            "state" : "translated",
            "value" : "Saisis un max supérieur à zéro. Pour supprimer une valeur, ouvre l’historique des max."
          }
        }
      }
    },
    "Enter by hand" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter by hand"
          }
...
            "state" : "translated",
            "value" : "Gérer"
          }
        }
      }
    },
    "Manage maxes" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Manage maxes"
...
            "state" : "translated",
            "value" : "Nouvelle prise : %@"
          }
        }
      }
    },
    "New max" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nouveau max"
          }
...
